--- a/assessment/views/dates.ejs
+++ b/assessment/views/dates.ejs
@@ -6,9 +6,5 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <% langs.forEach(function(lang){ %>        
-                      <li><%=  lang.date  %></li>
-        <% }); %>  
-    </ul>
+    <h1>Hello</h1>
 </body>
