--- a/assessment/views/index.ejs
+++ b/assessment/views/index.ejs
@@ -8,6 +8,6 @@
 <body>
     <%- include('common/header'); %>
     <h1>Home Page</h1>
-    <a href="http://localhost:20000/views/lang.ejs">help</a>
+    <a href="/dates">help</a>
 </body>
 </html>
