--- a/assessment/views/dates.ejs
+++ b/assessment/views/dates.ejs
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Date</title>
 </head>
 <body>
-    <h1>Hello</h1>
-    <ul>
-        
+    <ul> 
+        <% // try {// %>
+            <ul>
+                <% // Dates.forEach(function(Date){// %>        
+                     <li><%= // Date.Date // %></li>
+                <%// }); //%>  
+            </ul>
+            <% //console.log("Success Loading Dates");//%>
+            <h2>Success Loading Dates</h2>
+        <%// } catch (err) { //%>
+            <% //console.log(err); //%>
+            <% //console.log("Error Loading Dates") //%> 
+            <h1><%= //err //%> </h1>    
+        <%// }; //%> 
     </ul>
 </body>
