--- a/assessment/views/common/header.ejs
+++ b/assessment/views/common/header.ejs
@@ -1,5 +1,5 @@
 <ul>
-    <li><a href="/dates">date</a></li>
-    <li>2</li>
+    <li><a href="/dates">Date Control</a></li>
+    <li><a href="/langs">Language Control</a></li>
     <li>3</li>
 </ul>
