--- a/assessment/views/index.ejs
+++ b/assessment/views/index.ejs
@@ -6,6 +6,7 @@
     <title>Test</title>
 </head>
 <body>
+    <link rel="shortcut icon" href="favicon.ico" /> 
     <%- include('common/header'); %>
     <h1>Home Page</h1>
 </body>
