--- a/assessment/views/index.ejs
+++ b/assessment/views/index.ejs
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Home</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
+
 <body>
-    <link rel="shortcut icon" href="favicon.ico" /> 
+    <link rel="shortcut icon" href="favicon.ico" />
     <%- include('common/header'); %>
-    <h1>Home Page</h1>
+        <h1>Home Page</h1>
+        <p>Data is licenced under 'Most Popular Programming Languages Since 2004' By Muhammad Khalid @Kaggle using a: <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 Licence</a> </p>
+        <p>Data is licenced under PYPL PopularitY of Progamming Languages under a:  <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a></p>
 </body>
+
 </html>
