heroku file changes

--- a/views/controlDate.ejs
+++ b/views/controlDate.ejs
@@ -7,8 +7,9 @@
     <title>addDate</title>
 </head>
 
-<body>
+<body> 
     <form method="POST">
+        <!--p><%= //Dates[0] %> </p-->
         <table>
             <thead>
                 <tr>
@@ -22,7 +23,7 @@
                         Date
                     </td>
                     <td>
-                        <input id="date" type="text" value="<%=Date.date%>">
+                        <input id="date" type="text" value="<%=Dates[0].Date%>">
                     </td>
                 </tr>
                 <tr>
@@ -30,7 +31,7 @@
                         Abap
                     </td>
                     <td>
-                        <input id="abap" type="text" value="<%=Date.abap%>">
+                        <input id="abap" type="text" value="<%=Dates[0].Abap%>">
                     </td>
                 </tr>
                 <tr>
@@ -38,7 +39,7 @@
                         Ada
                     </td>
                     <td>
-                        <input id="ada" type="text" value="<%=Date.ada%>">
+                        <input id="ada" type="text" value="<%=Dates[0].Ada%>">
                     </td>
                 </tr>
                 <tr>
@@ -46,7 +47,7 @@
                         C#
                     </td>
                     <td>
-                        <input id="c_sharp" type="text" value="<%=Date.c_sharp%>">
+                        <input id="c_sharp" type="text" value="<%=Dates[0].C_Sharp%>">
                     </td>
                 </tr>
                 <tr>
@@ -54,13 +55,13 @@
                         C/C++
                     </td>
                     <td>
-                        <input id="corcplusplus" type="text" value="<%=Date.corcplusplus%>">
+                        <input id="corcplusplus" type="text" value="<%=Dates[0].CorCPlusPlus%>">
                     </td>
                 </tr>
                 <tr>
                     <td>Cobol</td>
                     <td>
-                        <input id="cobol" type="text" value="<%=Date.cobol%>">
+                        <input id="cobol" type="text" value="<%=Dates[0].Cobol%>">
                     </td>
                 </tr>
                 <tr>
@@ -68,7 +69,7 @@
                         Dart
                     </td>
                     <td>
-                        <input id="dart" type="text" value="<%=Date.dart%>">
+                        <input id="dart" type="text" value="<%=Dates[0].Dart%>">
                     </td>
                 </tr>
                 <tr>
@@ -76,7 +77,7 @@
                         Delphi
                     </td>
                     <td>
-                        <input id="delphi" type="text" value="<%=Date.delphi%>">
+                        <input id="delphi" type="text" value="<%=Dates[0].Delphi%>">
                     </td>
                 </tr>
                 <tr>
@@ -84,7 +85,7 @@
                         Go
                     </td>
                     <td>
-                        <input id="go" type="text" value="<%=Date.go%>">
+                        <input id="go" type="text" value="<%=Dates[0].Go%>">
                     </td>
                 </tr>
                 <tr>
@@ -92,7 +93,7 @@
                         Groovy
                     </td>
                     <td>
-                        <input id="groovy" type="text" value="<%=Date.groovy%>">
+                        <input id="groovy" type="text" value="<%=Dates[0].Groovy%>">
                     </td>
                 </tr>
                 <tr>
@@ -100,7 +101,7 @@
                         Haskell
                     </td>
                     <td>
-                        <input id="haskell" type="text" value="<%=Date.haskell%>">
+                        <input id="haskell" type="text" value="<%=Dates[0].Haskell%>">
                     </td>
                 </tr>
                 <tr>
@@ -108,7 +109,7 @@
                         Java
                     </td>
                     <td>
-                        <input id="java" type="text" value="<%=Date.java%>">
+                        <input id="java" type="text" value="<%=Dates[0].Java%>">
                     </td>
                 </tr>
                 <tr>
@@ -116,7 +117,7 @@
                         JavaScript
                     </td>
                     <td>
-                        <input id="javascript"  type="text" value="<%=Date.javascript%>">
+                        <input id="javascript"  type="text" value="<%=Dates[0].Javascript%>">
                     </td>
                 </tr>
                 <tr>
@@ -124,7 +125,7 @@
                         Julia
                     </td>
                     <td>
-                        <input id="julia" type="text" value="<%=Date.julia%>">
+                        <input id="julia" type="text" value="<%=Dates[0].Julia%>">
                     </td>
                 </tr>
                 <tr>
@@ -132,7 +133,7 @@
                         Kotlin
                     </td>
                     <td>
-                        <input id="kotlin" type="text" value="<%=Date.kotlin%>">
+                        <input id="kotlin" type="text" value="<%=Dates[0].Kotlin%>">
                     </td>
                 </tr>
                 <tr>
@@ -140,7 +141,7 @@
                         Lua
                     </td>
                     <td>
-                        <input id="lua" type="text" value="<%=Date.lua%>">
+                        <input id="lua" type="text" value="<%=Dates[0].Lua%>">
                     </td>
                 </tr>
                 <tr>
@@ -148,7 +149,7 @@
                         Matlab
                     </td>
                     <td>
-                        <input id="matlab" type="text" value="<%=Date.matlab%>">
+                        <input id="matlab" type="text" value="<%=Dates[0].Matlab%>">
                     </td>
                 </tr>
                 <tr>
@@ -156,7 +157,7 @@
                         Objective-C
                     </td>
                     <td>
-                        <input id="objective_c" type="text" value="<%=Date.objective_c%>">
+                        <input id="objective_c" type="text" value="<%=Dates[0].Objective_C%>">
                     </td>
                 </tr>
                 <tr>
@@ -164,7 +165,7 @@
                         Perl
                     </td>
                     <td>
-                        <input id="perl" type="text" value="<%=Date.perl%>">
+                        <input id="perl" type="text" value="<%=Dates[0].Perl%>">
                     </td>
                 </tr>
                 <tr>
@@ -172,7 +173,7 @@
                         PHP
                     </td>
                     <td>
-                        <input id="php" type="text" value="<%=Date.php%>">
+                        <input id="php" type="text" value="<%=Dates[0].PHP%>">
                     </td>
                 </tr>
                 <tr>
@@ -180,14 +181,14 @@
                         Python
                     </td>
                     <td>
-                        <input id="python" type="text" value="<%=Date.python%>">
+                        <input id="python" type="text" value="<%=Dates[0].Python%>">
                 </tr>
                 <tr>
                     <td>
                         R
                     </td>
                     <td>
-                        <input id="r" type="text" value="<%=Date.r%>">
+                        <input id="r" type="text" value="<%=Dates[0].R%>">
                     </td>
                 </tr>
                 <tr>
@@ -195,7 +196,7 @@
                         Ruby
                     </td>
                     <td>
-                        <input id="ruby" type="text" value="<%=Date.ruby%>">
+                        <input id="ruby" type="text" value="<%=Dates[0].Ruby%>">
                     </td>
                 </tr>
                 <tr>
@@ -203,7 +204,7 @@
                         Rust
                     </td>
                     <td>
-                        <input id="rust" type="text" value="<%=Date.rust%>">
+                        <input id="rust" type="text" value="<%=Dates[0].Rust%>">
                     </td>
                 </tr>
                 <tr>
@@ -211,7 +212,7 @@
                         Scala
                     </td>
                     <td>
-                        <input id="scala" type="text" value="<%=Date.scala%>">
+                        <input id="scala" type="text" value="<%=Dates[0].Scala%>">
                     </td>
                 </tr>
                 <tr>
@@ -219,7 +220,7 @@
                         Swift
                     </td>
                     <td>
-                        <input id="swift" type="text" value="<%=Date.swift%>">
+                        <input id="swift" type="text" value="<%=Dates[0].Swift%>">
                     </td>
                 </tr>
                 <tr>
@@ -227,7 +228,7 @@
                         TypeScript
                     </td>
                     <td>
-                        <input id="typescript" type="text" value="<%=Date.typescript%>">
+                        <input id="typescript" type="text" value="<%=Dates[0].TypeScript%>">
                     </td>
                 </tr>
                 <tr>
@@ -235,7 +236,7 @@
                         VBA
                     </td>
                     <td>
-                        <input id="vba" type="text" value="<%=Date.vba%>">
+                        <input id="vba" type="text" value="<%=Dates[0].VBA%>">
                     </td>
                 </tr>
                 <tr>
@@ -243,7 +244,7 @@
                         Visual Basic
                     </td>
                     <td>
-                        <input id="visual_basic" type="text" value="<%=Date.visual_basic%>">
+                        <input id="visual_basic" type="text" value="<%=Dates[0].Visual_Basic%>">
                     </td>
                 </tr>
                 <tr>
@@ -319,7 +320,7 @@
         invisual_basic = document.getElementById("visual_basic").value;
         window.location.href = "/controlDate/update/"+indate+"/"+inabap+"/"+inada+"/"+inc_sharp+"/"+incorcplusplus+"/"+incobol+"/"+indart+"/"+indelphi+"/"+ingo+"/"+ingroovy+"/"+inhaskell+"/"+injava+"/"+injavascript+"/"+injulia+"/"+inkotlin+"/"+inlua+"/"+inmatlab+"/"+inobjective_c+"/"+inperl+"/"+inphp+"/"+inpython+"/"+inr+"/"+inruby+"/"+inrust+"/"+inscala+"/"+inswift+"/"+intypescript+"/"+invba+"/"+invisual_basic;
         }
-    </script>
+    </script> 
 </body>
 
 </html>
