--- a/views/langs.ejs
+++ b/views/langs.ejs
@@ -20,7 +20,6 @@
             </thead>
             <tbody>
                 <% langs.forEach(lang=> { %>
-                    <tr><a href="langs/delete/<%=lang._id%>">Delete Record</a></tr>
                     <tr>
                         <td>
                             Abap
@@ -224,6 +223,14 @@
                         </td>
                         <td>
                             <%= lang.TypeScript %>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            VBA
+                        </td>
+                        <td>
+                            <%= lang.VBA %>
                         </td>
                     </tr>
                     <tr>
