--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,5 +1,5 @@
 <ul>
     <li><a href="/dates">Date Control</a></li>
     <li><a href="/langs/September 2020">Language Control</a></li>
-    <li><a href="/addDate">Add / Modify Date</a></li>
+    <li><a href="/updateDate">Add / Modify Date</a></li>
 </ul>
