--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,5 +1,5 @@
 <ul>
     <li><a href="/dates">Date Control</a></li>
-    <li><a href="/langs/September 2020">Language Control</a></li>
-    <li><a href="/controlDate">Add Date</a></li>
+    <li><a href="/langs/September 2020">September 2020</a></li>
+    <li><a href="/controlDate/add/">Add Date</a></li>
 </ul>
