--- a/views/controlDate.ejs
+++ b/views/controlDate.ejs
@@ -25,7 +25,7 @@
                         Date
                     </td>
                     <td>
-                        <input id="date" type="text" value="<%=typeof Dates[0].Date !='undefined' ? Dates[0].Date: ''%>">
+                        <input id="date" type="text" value="<%=typeof Dates[0].Date !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -33,7 +33,7 @@
                         Abap
                     </td>
                     <td>
-                        <input id="abap" type="text" value="<%=typeof Dates[0].Abap !='undefined' ? Dates[0].Abap: ''%>">
+                        <input id="abap" type="text" value="<%=typeof Dates[0].Abap !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -41,7 +41,7 @@
                         Ada
                     </td>
                     <td>
-                        <input id="ada" type="text" value="<%=typeof Dates[0].Ada !='undefined' ? Dates[0].Ada: ''%>">
+                        <input id="ada" type="text" value="<%=typeof Dates[0].Ada !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -49,7 +49,7 @@
                         C#
                     </td>
                     <td>
-                        <input id="c_sharp" type="text" value="<%=typeof Dates[0].C_Sharp !='undefined' ? Dates[0].C_Sharp: ''%>">
+                        <input id="c_sharp" type="text" value="<%=typeof Dates[0].C_Sharp !='undefined' ? ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -57,13 +57,13 @@
                         C/C++
                     </td>
                     <td>
-                        <input id="corcplusplus" type="text" value="<%=typeof Dates[0].CorCPlusPlus !='undefined' ? Dates[0].CorCPlusPlus: ''%>">
+                        <input id="corcplusplus" type="text" value="<%=typeof Dates[0].CorCPlusPlus !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
                     <td>Cobol</td>
                     <td>
-                        <input id="cobol" type="text" value="<%=typeof Dates[0].Cobol !='undefined' ? Dates[0].Cobol: ''%>">
+                        <input id="cobol" type="text" value="<%=typeof Dates[0].Cobol !='undefined' ? ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -71,7 +71,7 @@
                         Dart
                     </td>
                     <td>
-                        <input id="dart" type="text" value="<%=typeof Dates[0].Dart !='undefined' ? Dates[0].Dart: ''%>">
+                        <input id="dart" type="text" value="<%=typeof Dates[0].Dart !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -79,7 +79,7 @@
                         Delphi
                     </td>
                     <td>
-                        <input id="delphi" type="text" value="<%=typeof Dates[0].Delphi !='undefined' ? Dates[0].Delphi: ''%>">
+                        <input id="delphi" type="text" value="<%=typeof Dates[0].Delphi !='undefined' ?''%>">
                     </td>
                 </tr>
                 <tr>
@@ -87,7 +87,7 @@
                         Go
                     </td>
                     <td>
-                        <input id="go" type="text" value="<%=typeof Dates[0].Go !='undefined' ? Dates[0].Go: ''%>">
+                        <input id="go" type="text" value="<%=typeof Dates[0].Go !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -95,7 +95,7 @@
                         Groovy
                     </td>
                     <td>
-                        <input id="groovy" type="text" value="<%=typeof Dates[0].Groovy ? Dates[0].Groovy: ''%>">
+                        <input id="groovy" type="text" value="<%=typeof Dates[0].Groovy ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -111,7 +111,7 @@
                         Java
                     </td>
                     <td>
-                        <input id="java" type="text" value="<%=typeof Dates[0].Java !='undefined' ? Dates[0].Java: ''%>">
+                        <input id="java" type="text" value="<%=typeof Dates[0].Java !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -119,7 +119,7 @@
                         JavaScript
                     </td>
                     <td>
-                        <input id="javascript"  type="text" value="<%=typeof Dates[0].Javascript !='undefined' ? Dates[0].Javascript: ''%>">
+                        <input id="javascript"  type="text" value="<%=typeof Dates[0].Javascript !='undefined' ? ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -127,7 +127,7 @@
                         Julia
                     </td>
                     <td>
-                        <input id="julia" type="text" value="<%=typeof Dates[0].Julia !='undefined' ? Dates[0].Julia: ''%>">
+                        <input id="julia" type="text" value="<%=typeof Dates[0].Julia !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -135,7 +135,7 @@
                         Kotlin
                     </td>
                     <td>
-                        <input id="kotlin" type="text" value="<%= typeof Dates[0].Kotlin !='undefined' ? Dates[0].Kotlin: ''%>">
+                        <input id="kotlin" type="text" value="<%= typeof Dates[0].Kotlin !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -143,7 +143,7 @@
                         Lua
                     </td>
                     <td>
-                        <input id="lua" type="text" value="<%= typeof Dates[0].Lua !='undefined' ? Dates[0].Lua: ''%>">
+                        <input id="lua" type="text" value="<%= typeof Dates[0].Lua !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -151,7 +151,7 @@
                         Matlab
                     </td>
                     <td>
-                        <input id="matlab" type="text" value="<%= typeof Dates[0].Matlab !='undefined' ? Dates[0].Matlab: ''%>">
+                        <input id="matlab" type="text" value="<%= typeof Dates[0].Matlab !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -159,7 +159,7 @@
                         Objective-C
                     </td>
                     <td>
-                        <input id="objective_c" type="text" value="<%=Dates[0].Objective_C ? Dates[0].Objective_C: ''%>">
+                        <input id="objective_c" type="text" value="<%=Dates[0].Objective_C ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -167,7 +167,7 @@
                         Perl
                     </td>
                     <td>
-                        <input id="perl" type="text" value="<%= typeof Dates[0].Perl !='undefined' ? Dates[0].Perl: ''%>">
+                        <input id="perl" type="text" value="<%= typeof Dates[0].Perl !='undefined' ? ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -175,7 +175,7 @@
                         PHP
                     </td>
                     <td>
-                        <input id="php" type="text" value="<%= typeof Dates[0].PHP !='undefined' ? Dates[0].PHP: ''%>">
+                        <input id="php" type="text" value="<%= typeof Dates[0].PHP !='undefined' ? ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -183,14 +183,14 @@
                         Python
                     </td>
                     <td>
-                        <input id="python" type="text" value="<%= typeof Dates[0].Python !='undefined' ? Dates[0].Python: ''%>">
+                        <input id="python" type="text" value="<%= typeof Dates[0].Python !='undefined' ?  ''%>">
                 </tr>
                 <tr>
                     <td>
                         R
                     </td>
                     <td>
-                        <input id="r" type="text" value="<%= typeof Dates[0].R !='undefined' ? Dates[0].R: ''%>">
+                        <input id="r" type="text" value="<%= typeof Dates[0].R !='undefined' ? ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -198,7 +198,7 @@
                         Ruby
                     </td>
                     <td>
-                        <input id="ruby" type="text" value="<%=typeof Dates[0].Ruby !='undefined' ? Dates[0].Ruby: ''%>">
+                        <input id="ruby" type="text" value="<%=typeof Dates[0].Ruby !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -206,7 +206,7 @@
                         Rust
                     </td>
                     <td>
-                        <input id="rust" type="text" value="<%= typeof Dates[0].Rust!='undefined' ? Dates[0].Rust: ''%>">
+                        <input id="rust" type="text" value="<%= typeof Dates[0].Rust!='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -214,7 +214,7 @@
                         Scala
                     </td>
                     <td>
-                        <input id="scala" type="text" value="<%= typeof Dates[0].Scala !='undefined' ? Dates[0].Scala: ''%>">
+                        <input id="scala" type="text" value="<%= typeof Dates[0].Scala !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -222,7 +222,7 @@
                         Swift
                     </td>
                     <td>
-                        <input id="swift" type="text" value="<%= typeof Dates[0].Swift !='undefined' ? Dates[0].Swift: ''%>">
+                        <input id="swift" type="text" value="<%= typeof Dates[0].Swift !='undefined' ? ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -230,7 +230,7 @@
                         TypeScript
                     </td>
                     <td>
-                        <input id="typescript" type="text" value="<%= typeof Dates[0].TypeScript !='undefined' ? Dates[0].TypeScript: ''%>">
+                        <input id="typescript" type="text" value="<%= typeof Dates[0].TypeScript !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -238,7 +238,7 @@
                         VBA
                     </td>
                     <td>
-                        <input id="vba" type="text" value="<%= typeof Dates[0].VBA !='undefined' ? Dates[0].VBA: ''%>">
+                        <input id="vba" type="text" value="<%= typeof Dates[0].VBA !='undefined' ?  ''%>">
                     </td>
                 </tr>
                 <tr>
@@ -246,7 +246,7 @@
                         Visual Basic
                     </td>
                     <td>
-                        <input id="visual_basic" type="text" value="<%= typeof Dates[0].Visual_Basic !='undefined' ? Dates[0].Visual_Basic: ''%>">
+                        <input id="visual_basic" type="text" value="<%= typeof Dates[0].Visual_Basic !='undefined' ? ''%>">
                     </td>
                 </tr>
                 <tr>
