removed ejs from add/update

--- a/views/controlDate.ejs
+++ b/views/controlDate.ejs
@@ -83,7 +83,7 @@
                         Go
                     </td>
                     <td>
-                        <input id="go" type="text" value=">">
+                        <input id="go" type="text" value="">
                     </td>
                 </tr>
                 <tr>
